--- a/utils/contentful-preview-extension.html
+++ b/utils/contentful-preview-extension.html
@@ -338,7 +338,13 @@ function showExtension(extension, publishedState, displayedLocales) {
       },
       "Filter Page": {
         slug: 'preview-filter-page',
-      }
+      },
+      "Professional": {
+        slug: 'preview-professional',
+      },
+      "Office": {
+        slug: 'preview-offices',
+      },
     }
   
   /** COMMON FUNCTIONS **/
