slug for qa preview

--- a/utils/contentful-preview-extension-qa.html
+++ b/utils/contentful-preview-extension-qa.html
@@ -339,7 +339,7 @@ function showExtension(extension, publishedState, displayedLocales) {
       "Filter Page": {
         slug: 'preview-filter-page',
       },
-      "Professionals": {
+      "Professional": {
         slug: 'preview-professional',
       },
       "Office": {
